src/main/java/syntactic/test/failing/declarationOfNoAType.ru
struct A {
	noAType x;
}

start {
}


/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 2 | 2 | Se esperaba tipo pero se encontró ID: noAType |